# owmap

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/scripts/: todo_fixme_to_issues.sh
.github/workflows/: delete_all_closed.yml  todo.yml  workflow.yml
docs/: guide.md  pipeline.puml
owmap/: cli.py  genmap.py
tests/: test_genmap.py  test_import.py
