[project]
name = "owmap"
version = "0.1.0"
description = "Generate maps for Old World from RGB bitmaps"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow>=11.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.uv.workspace]
members = [
    "venv",
]

[project.scripts]
owmap = "owmap.cli:main"    

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["owmap"]